[gd_scene load_steps=6 format=3 uid="uid://jmksfugqcld7"]

[ext_resource type="Script" uid="uid://bmp61o5txs54w" path="res://prototypes/character_test/dribble_cast3D.gd" id="1_66hue"]
[ext_resource type="Script" uid="uid://cmlfnal2o37ys" path="res://addons/godot_state_charts/state_chart.gd" id="2_r08o0"]
[ext_resource type="Script" uid="uid://bhy7it06w5oxr" path="res://addons/godot_state_charts/compound_state.gd" id="3_60ei5"]
[ext_resource type="Script" uid="uid://b2onxl0bnlyi7" path="res://addons/godot_state_charts/atomic_state.gd" id="4_6mqk8"]
[ext_resource type="Script" uid="uid://g3cjsxu4h2a2" path="res://addons/godot_state_charts/transition.gd" id="5_ywom5"]

[node name="DribbleCast3D" type="RayCast3D"]
target_position = Vector3(56, 0, 0)
collision_mask = 14
hit_from_inside = true
script = ExtResource("1_66hue")

[node name="State" type="Node" parent="."]
script = ExtResource("2_r08o0")

[node name="root" type="Node" parent="State"]
script = ExtResource("3_60ei5")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="State/root"]
script = ExtResource("4_6mqk8")

[node name="to tracking" type="Node" parent="State/root/idle"]
script = ExtResource("5_ywom5")
to = NodePath("../../tracking")
event = &"idle to tracking"
delay_in_seconds = "0.0"

[node name="tracking" type="Node" parent="State/root"]
script = ExtResource("4_6mqk8")

[node name="to idle" type="Node" parent="State/root/tracking"]
script = ExtResource("5_ywom5")
to = NodePath("../../idle")
event = &"tracking to idle"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="State/root/tracking" to="." method="_on_tracking_state_entered"]
[connection signal="state_exited" from="State/root/tracking" to="." method="_on_tracking_state_exited"]
[connection signal="state_physics_processing" from="State/root/tracking" to="." method="_on_tracking_state_physics_processing"]
